# cod-platform-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/app/: main.py
src/cod_platform_ai/: main.py
