[project]
name = "cod-platform-ai"
version = "0.0.1"
description = "AI insight engine and MCP server for the COD Platform"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cod_platform_ai"]
